syntax = "proto3";

package dash.v1;

import "google/api/annotations.proto";


service AdminService {
  rpc AdminList(AdminListRequest) returns (AdminListResponse) {
    option (google.api.http) = {
      get: "/api/admin/list"
    };
  }
  rpc AdminCreate(AdminCreateRequest) returns (AdminCreateResponse) {
    option (google.api.http) = {
      post: "/api/admin/create"
      body: "*"
    };
  }
  rpc AdminUpdate(AdminUpdateRequest) returns (AdminUpdateResponse) {
    option (google.api.http) = {
      post: "/api/admin/update/{id}"
      body: "*"
    };
  }
  rpc AdminDetail(AdminDetailRequest) returns (AdminDetailResponse) {
    option (google.api.http) = {
      get: "/api/admin/detail/{id}"
    };
  }
  rpc AdminDelete(AdminDeleteRequest) returns (AdminDeleteResponse) {
    option (google.api.http) = {
      delete: "/api/admin/delete/{id}"
    };
  }
}

message Admin {
  int64 id = 1;
  string avatar = 2;
  string username = 3;
  string nickname = 4;
  repeated string roles = 5;
}

message AdminListRequest {
}

message AdminListResponse {
  repeated Admin admins = 1;
}

message AdminCreateRequest {
  string avatar = 1;
  string username = 2;
  string nickname = 3;
  string password = 4;
  repeated string roles = 5;
}

message AdminCreateResponse {
  Admin admin = 1;
}

message AdminUpdateRequest {
  int64 id = 1;
  string avatar = 2;
  string username = 3;
  string nickname = 4;
  string password = 5;
  repeated string roles = 6;
}

message AdminUpdateResponse {
  Admin admin = 1;
}

message AdminDetailRequest {
  int64 id = 1;
}

message AdminDetailResponse {
  Admin admin = 1;
}

message AdminDeleteRequest {
  int64 id = 1;
}

message AdminDeleteResponse {
}

