syntax = "proto3";

package data.v1;

message Admin {
	int64 id = 1; // 用户ID
	string username = 2; // 用户名
	string nickname = 3; // 昵称
	string avatar = 4; // 头像
	string password = 5; // 密码
	repeated string roles = 6; // 权限
	int64 created_at = 7; // 创建时间
	int64 updated_at = 8; // 更新时间
}

message KeyValueStore {
	string key = 1; // 键
	bytes value = 2; // 值
	int64 created_at = 3; // 创建时间
	int64 updated_at = 4; // 更新时间
}

message User {
	int64 id = 1; // 用户ID
	string username = 2; // 用户名
	string remark = 3; // 备注
	string avatar = 4; // 头像
	string phone = 5; // 手机号
	int64 flags = 6; // 标记位
	int64 created_at = 7; // 创建时间
	int64 updated_at = 8; // 更新时间
}

message UserPlatform {
	int64 user_id = 1; // 用户ID
	string platform = 2; // 平台
	string platform_id = 3; // 平台ID
	string second_id = 4; // 第二ID
	int64 created_at = 5; // 创建时间
	int64 updated_at = 6; // 更新时间
}
